--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body class="bg-light">
 	<!-- the entire body must be written by student -->
 	  <div class="container mt-5">
-    <h2 class="text-center block-heading p" style="color:#3b99e0;">Shopping Cart</h2>
+    <h2 class="text-center block-heading" style="color:#3b99e0;">Shopping Cart</h2>
     <p class="text-center">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to
       be in possession of property.</p>
     <div class="row bg-white shadow-sm">
