--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 <body class="bg-light">
 	<!-- the entire body must be written by student -->
 	  <div class="container mt-5">
-    <p class="text-center block-heading" style="color:#3b99e0;">Shopping Cart</p>
-    <p class="text-center">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to
+    <h2 class="text-center block-heading" style="color:#3b99e0;">Shopping Cart</h2>
+    <p class="text-center block-heading">The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to
       be in possession of property.</p>
     <div class="row bg-white shadow-sm">
       <div class="col-lg-8 p-3">
