--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body class="bg-light">
 	<!-- the entire body must be written by student -->
 	  <div class="container mt-5">
-    <h2 class="text-center block-heading" style="color:#3b99e0;">Shopping Cart</h2>
+    <p class="text-center block-heading" style="color:#3b99e0;">Shopping Cart</p>
     
     <div class="row bg-white shadow-sm">
       <div class="col-lg-8 p-3">
@@ -27,7 +27,7 @@
 				 </a>
                 </div>
                 <div class="col-6">
-                  <h4 class="text-primary">Product Name</h4>
+                  <h2 class="text-primary">Product Name</h2>
                   <p class="m-0"><span>Display:</span>5 inches</p>
                   <p class="m-0"><span>RAM:</span>4 GB</p>
                   <p class="m-0"><span>Memory:</span>64 GB</p>
@@ -59,7 +59,7 @@
 				 </a>
                 </div>
                 <div class="col-6">
-                  <h4 class="text-primary">Product Name</h4>
+                  <h2 class="text-primary">Product Name</h2>
                   <p class="m-0"><span>Display:</span>5 inches</p>
                   <p class="m-0"><span>RAM:</span>4 GB</p>
                   <p class="m-0"><span>Memory:</span>64 GB</p>
@@ -91,7 +91,7 @@
 				 </a>
                 </div>
                 <div class="col-6">
-                  <h4 class="text-primary">Product Name</h4>
+                  <h2 class="text-primary">Product Name</h2>
                   <p class="m-0"><span>Display:</span>5 inches</p>
                   <p class="m-0"><span>RAM:</span>4 GB</p>
                   <p class="m-0"><span>Memory:</span>64 GB</p>
